# teched2025-BTM161

./: .env.example  .gitignore  1_Standard_agentic_coffee_shop.ipynb  2_Exceptions_agentic_coffee_shop.ipynb  3_Extending_agentic_coffee_shop.ipynb  AGENTS.md  CLAUDE.md  README.md  demo.ipynb  pyproject.toml  requirements.txt
assets/: architecture_c_layered_hybrid.mmd  decoupled_guardrail_system.mmd  guarded_agent_langgraph.mmd  system_level_guardrails.mmd
spike/: adapter_langgraph.py  guardrail_demo.py
spike/guardrail/: __init__.py  gateway.py  pipeline.py  registry.py  rules.py  types.py
src/: __init__.py  coffee_shop.py  eventlog_conversion.py  llm.py  simulate.py  styles.py
src/agents/: __init__.py  barista_agent.py  context_isolation.py  customer_agent.py  customer_service_agent.py  inventory_agent.py  order_agent.py  order_state_machine.py  order_store.py  shared_components.py
src/dashboard/: __init__.py  agent_panel.py  app.py  conversation_runner.py  event_bus.py
src/services/coffee-machine/: logger.py  main.py  state.py  worker.py
src/services/coffee-machine/logs/: coffee_machine.csv
src/trace_processing/: __init__.py  log_generator.py  trace_processor.py
src/visualization/: visualizer.py
tests/: test_context_isolation.py  test_conversation_runner.py  test_event_bus.py  test_handoff.py  test_handoff_mechanics.py  test_tools_barista.py  test_tools_customer_service.py  test_tools_inventory.py  test_tools_order.py
