[project]
name = "lg-coffee-mas"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "langgraph (>=0.6.8,<0.7.0)",
    "langgraph-swarm (>=0.0.14,<0.0.15)",
    "mlflow (>=3.4.0,<4.0.0)",
    "ipywidgets (>=8.0.0,<9.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "langchain[ollama] (<1.0.0)",
    "langchain[anthropic] (<1.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[project.scripts]
simulate = "src.simulate:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
